# Gameroni

./: .gitignore  CMakeLists.txt  Gameroni.pro  README.md  imageprocessor.cpp  imageprocessor.h  imageprocessorlaplacian.cpp  imageprocessorlaplacian.h  imageprocessormotion.cpp  imageprocessormotion.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opencvscreen.cpp  opencvscreen.h  snapshotcapture.cpp  snapshotcapture.h  win32utils.cpp  win32utils.h  windowcapture.cpp  windowcapture.h  windowcapturewidget.cpp  windowcapturewidget.h
